# MLSP

./: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
MLSP/: pyvenv.cfg
config/: bot_config.json  github_discussions_config.json  social_media_config.json
configs/: global_config.yml
docs/: _config.yml  index.html
macp/ai/: mod_generator.py
macp/analytics/: telemetry_system.py
macp/core/: config.py  config_manager.py  unified_config.py
macp/dependency_manager/: package_manager.py
macp/economy/: resource_simulator.py
macp/environment/: climate_simulator.py
macp/integration/: content_manager.py
macp/ml_experiments/: experiment_tracker.py
macp/ml_feature_engineering/: feature_selector.py
macp/ml_optimization/: model_optimizer.py
macp/ml_registry/: model_registry.py
macp/mod_generation/: mod_generator.py
macp/performance/: profiler.py
macp/plugin_system/: plugin_manager.py
macp/procedural_generation/: content_generator.py
macp/simulation/: scenario_manager.py
macp/terrain/: terrain_generator.py
macp/visualization/: data_visualizer.py
macp/world_generation/: climate_ecosystem_model.py  (+3 more)
monitoring/: alert_rules.yml  prometheus.yml
performance/: performance_profiler.py
scripts/: discord_bot.py  github_discussions_manager.py  social_media_bot.py
security/: security_config.yml
(+30 files in other folders)
